--- a/src/components/HomeComponents/styles/aboutContentStyles.css
+++ b/src/components/HomeComponents/styles/aboutContentStyles.css
@@ -206,18 +206,23 @@
     padding: 0;
   }
 
+  .aboutContent-hobbies-container {
+    display: flex;
+    flex-direction: column;
+  }
+
   .aboutContent-hobbies1 {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
   .aboutContent-hobbies2 {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
 
   .aboutContent-hobbies {
     grid-column-start: 8;
-    grid-column-end: 10;
+    grid-column-end: 12;
     grid-row-start: 2;
     margin-top: 10rem;
     width: 500px;
@@ -267,7 +272,7 @@
   .aboutContent-text-2__button {
     text-decoration: none;
     color: inherit;
-    font-size: 22px;
+    font-size: 30px;
     font-weight: 500;
     border-bottom: 2px solid black;
     padding-bottom: 1px;
@@ -290,16 +295,15 @@
   }
 
   .aboutContent-active__text h4 {
-    margin-top: 19rem;
+    margin-top: 20rem;
   }
 
   .aboutContent-active__text p {
     font-size: 25px;
-    padding: 25px;
+    padding-top: 25px;
     line-height: 30px;
   }
 
   .aboutContent-active__text .aboutContent-text-2__button {
-    margin-left: 25px;
   }
 }
