added new project desc prop and connected to modal, updated styles

--- a/src/components/HomeComponents/styles/headerStyles.css
+++ b/src/components/HomeComponents/styles/headerStyles.css
@@ -142,7 +142,8 @@ body:not(.header) {
 
 .header-role {
   grid-column-start: 4;
-  grid-column-end: 6;
+  grid-column-end: 5;
+  justify-self: center;
 }
 
 .header-role span {
