--- a/src/components/HomeComponents/styles/introContentStyles.css
+++ b/src/components/HomeComponents/styles/introContentStyles.css
@@ -55,7 +55,7 @@
 }
 
 .intro-button__text {
-  color: #e1dfdd;
+  color: #cacac9 !important;
   font-size: 2rem;
   text-decoration: none;
   transition-duration: 1s;
