--- a/src/components/HomeComponents/styles/headerStyles.css
+++ b/src/components/HomeComponents/styles/headerStyles.css
@@ -7,8 +7,6 @@
   text-decoration-color: rgb(225, 223, 221);
   top: 0;
   position: sticky;
-  /* width: inherit;
-  max-width: inherit; */
   z-index: 101;
 }
 
@@ -139,14 +137,8 @@ body:not(.header) {
 
 .header-name {
   grid-column-start: 1;
-  grid-column-end: 3;
+  grid-column-end: 2;
   /* justify-self: center; */
-}
-
-.header-role {
-  grid-column-start: 4;
-  grid-column-end: 5;
-  justify-self: center;
 }
 
 .header-role span {
@@ -155,8 +147,8 @@ body:not(.header) {
 }
 
 .header-location {
-  grid-column-start: 6;
-  grid-column-end: 8;
+  grid-column-start: 5;
+  grid-column-end: 6;
 }
 
 .header-location p {
@@ -175,18 +167,11 @@ body:not(.header) {
   color: black;
 }
 
-/* .header-nav__item:nth-child(2) {
-  padding-left: 10px;
-}
-.header-nav__item:last-of-type {
-  padding-left: 10px;
-} */
-
 @media (min-width: 1100px) {
   .large-header {
     padding-top: 2.625rem;
     display: grid;
-    grid-template-columns: repeat(13, minmax(0, 13));
+    grid-template-columns: repeat(13, 1fr);
     column-gap: 1rem;
     padding-top: 42px;
     font-size: 1.4rem;
@@ -194,26 +179,38 @@ body:not(.header) {
     height: 75px;
   }
 
+  .large-hedaer .header-name {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+
+  .large-header .header-role {
+    grid-column-start: 4;
+    grid-column-end: 6;
+    /* justify-self: center; */
+  }
+
+  .large-header .header-location {
+    grid-column-start: 7;
+    grid-column-end: 10;
+    justify-self: start;
+  }
+
   .header-nav {
     display: flex;
     justify-content: flex-end;
     position: fixed;
     z-index: 100;
+    right: 70px;
   }
 
   .header-nav > * {
     margin-left: 10px;
   }
 
-  .large-header .header-name,
-  .header-nav .header-nav__items {
+  .large-header .header-name {
     position: fixed;
     z-index: 100;
-  }
-  .header-nav .header-nav__items {
-    /* right: 70px; */
-
-    border: 2px solid blue;
   }
 
   /* active class for selected nav */
