--- a/src/components/HomeComponents/styles/aboutContentStyles.css
+++ b/src/components/HomeComponents/styles/aboutContentStyles.css
@@ -2,12 +2,20 @@
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   margin-top: 5rem;
-  max-width: 750px;
+  column-gap: 32px;
+  /* max-width: 750px; */
 }
 
-.aboutContent-title {
+div .aboutContent-title-1 {
   grid-column-start: 1;
-  grid-column-end: 8;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+div .aboutContent-title-2 {
+  grid-column-start: 2;
+  font-weight: 500;
+  font-size: 40px;
 }
 
 .aboutContent-title h3 {
@@ -39,63 +47,20 @@
   font-weight: 500;
 }
 
-.aboutContent-hobbies {
-  grid-row-start: 3;
-  grid-column-start: 7;
-}
-
-.aboutContent-hobbies h3 {
-  text-transform: uppercase;
-  padding-bottom: 0.3rem;
-  font-size: 2.5rem;
-  font-weight: 500;
-  line-height: 50px;
-  display: inline-block;
-}
-
 /* aboutContent image*/
 .aboutContent-image {
-  grid-column-start: 1;
-  grid-column-end: 8;
-  grid-row-start: 2;
+  grid-column-start: 2;
+  grid-column-end: 7;
+  grid-row-start: 3;
   padding: 1rem 1rem 1rem 0;
-  max-height: 500px;
+  /* height: 80%; */
 }
 
 .aboutContent-image img {
-  filter: grayscale(60%);
+  filter: grayscale(80%);
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-
-.aboutContent-text {
-  border: 2px solid blue;
-  max-width: 300px;
-  min-width: 150px;
-}
-
-.aboutContent-text p {
-  font-size: 1.2rem;
-  line-height: 20px;
-}
-
-.aboutContent-text-1 {
-  grid-row-start: 3;
-  grid-column-start: 1;
-  grid-column-end: 7;
-  height: min-content;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-}
-
-.aboutContent-text-1 p {
-  width: 100%;
-  min-height: 50px;
-  font-size: 22px;
-  overflow: hidden;
-  max-width: 450px;
 }
 
 .aboutContent-button {
@@ -125,10 +90,6 @@
   display: none;
 }
 
-.aboutContent-active__text {
-  display: none;
-}
-
 @media (min-width: 1100px) {
   .aboutContent-container {
     margin-top: 20rem;
@@ -138,12 +99,12 @@
     height: 100%;
   }
 
-  .aboutContent-title {
+  /* .aboutContent-title {
     grid-row-start: 1;
     grid-column-start: 1;
     grid-column-end: 4;
     min-width: 154px;
-  }
+  } */
 
   .aboutContent-title h4 {
     font-size: 25px;
@@ -201,66 +162,18 @@
     margin-top: 10rem;
     grid-column-start: 3;
     grid-column-end: 8;
-    max-width: 900px;
-    min-height: 700px;
+    /* max-width: 900px;
+    min-height: 700px; */
     padding: 0;
-  }
-
-  .aboutContent-hobbies-container {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .aboutContent-hobbies1 {
-    display: flex;
-    justify-content: space-between;
-  }
-  .aboutContent-hobbies2 {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .aboutContent-hobbies {
-    grid-column-start: 8;
-    grid-column-end: 12;
-    grid-row-start: 2;
-    margin-top: 10rem;
-    width: 500px;
-    height: 100%;
-  }
-
-  .aboutContent-hobbies h3 {
-    font-size: 60px;
-    line-height: 80px;
-    display: inline-block;
   }
 
   .aboutContent-image img {
     object-fit: cover;
-  }
-
-  .aboutContent-text {
-    grid-column-start: 3;
-    grid-column-end: 13;
-    width: 650px;
-    height: 200px;
-  }
-
-  .aboutContent-text-1 {
-    grid-column-start: 8;
-  }
-  .aboutContent-text p {
-    font-size: 22px;
-    line-height: 26px;
-    max-width: 300px;
+    height: 100%;
+    width: 100%;
   }
 
   .aboutContent-text__button {
-    display: inline-block;
-  }
-
-  .aboutContent-text-1,
-  .aboutContent-text-2 {
     display: inline-block;
   }
 
@@ -284,26 +197,6 @@
   .aboutContent-title-2 {
     display: none;
   }
-  .aboutContent-text-1 {
-    display: none;
-  }
 
   /* active text info */
-  .aboutContent-active__text {
-    display: block;
-    height: 100%;
-  }
-
-  .aboutContent-active__text h4 {
-    margin-top: 20rem;
-  }
-
-  .aboutContent-active__text p {
-    font-size: 25px;
-    padding-top: 25px;
-    line-height: 30px;
-  }
-
-  .aboutContent-active__text .aboutContent-text-2__button {
-  }
 }
