--- a/src/components/HomeComponents/styles/aboutContentStyles.css
+++ b/src/components/HomeComponents/styles/aboutContentStyles.css
@@ -164,6 +164,14 @@ div .aboutContent-title-2 {
   display: none;
 }
 
+.aboutContent-large-button {
+  display: none;
+}
+
+.aboutContent-bio {
+  display: none;
+}
+
 @media (min-width: 1100px) {
   .aboutContent-container {
     margin-top: 20rem;
