--- a/src/components/HomeComponents/styles/aboutContentStyles.css
+++ b/src/components/HomeComponents/styles/aboutContentStyles.css
@@ -17,6 +17,9 @@ div .aboutContent-title-2 {
   grid-column-start: 2;
   font-weight: 500;
   font-size: 70px;
+  /* grid-column-start: 1; */
+  grid-column-end: 6;
+  grid-row-start: 2;
 }
 
 .aboutContent-title h3 {
@@ -31,9 +34,6 @@ div .aboutContent-title-2 {
 }
 
 .aboutContent-title-2 {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 2;
 }
 
 .aboutContent-title-3 {
@@ -187,7 +187,8 @@ div .aboutContent-title-2 {
     font-weight: 500;
     line-height: 20px;
   }
-  .aboutContent-title-2 {
+  div .aboutContent-title-2 {
+    font-size: 90px;
   }
 
   /* .aboutContent-title-2 {
@@ -202,7 +203,7 @@ div .aboutContent-title-2 {
 
   /* design and development title */
   .aboutContent-title-3 {
-    display: block;
+    /* display: block; */
     grid-row-start: 2;
     grid-column-start: 4;
     grid-column-end: 8;
@@ -220,7 +221,7 @@ div .aboutContent-title-2 {
   /* ui development title */
 
   .aboutContent-title-4 {
-    display: block;
+    /* display: block; */
     grid-column-start: 9;
     grid-column-end: 12;
     grid-row-start: 2;
@@ -241,10 +242,41 @@ div .aboutContent-title-2 {
   .aboutContent-image {
     position: relative;
     margin-top: 1rem;
-    grid-column-start: 2;
-    grid-column-end: 12;
-    height: 850px;
+    grid-column-start: 3;
+    grid-column-end: 11;
+    justify-self: center;
+    max-width: 1035px;
+    min-width: 800px;
+    width: 75%;
+    height: 680px;
     padding: 0;
+  }
+
+  /*  image overlay & hover */
+  .aboutContent-image__overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.75);
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: 0.5 ease;
+  }
+
+  .aboutContent-image__overlay a {
+    text-decoration: none;
+    text-transform: uppercase;
+    margin-top: 30%;
+    position: absolute;
+    text-align: center;
+    font-size: 8rem;
+    color: white !important;
+    width: 100%;
+  }
+  .aboutContent-image:hover .aboutContent-image__overlay {
+    height: 100%;
   }
 
   .aboutContent-image img {
@@ -288,6 +320,7 @@ div .aboutContent-title-2 {
   .aboutContent-image-skills {
     position: absolute;
     /* transform: translate(-50%, -50%); */
+    visibility: hidden;
     top: 90%;
     left: 18%;
     display: flex;
@@ -326,19 +359,23 @@ div .aboutContent-title-2 {
   .aboutContent-bio {
     display: block;
     grid-row-start: 4;
-    grid-column-start: 2;
-    grid-column-end: 12;
+    grid-column-start: 3;
+    grid-column-end: 11;
+    justify-self: center;
+    max-width: 1035px;
+    min-width: 800px;
+    width: 75%;
   }
 
   .aboutContent-bio p {
     font-size: 2rem;
     letter-spacing: 1.45px;
-    line-height: 28px;
+    line-height: 35px;
     padding-top: 20px;
   }
 
   .aboutContent-large-button {
-    display: block;
+    visibility: hidden;
     margin-top: 5rem;
     grid-row-start: 5;
     grid-column-start: 2;
