--- a/src/components/HomeComponents/styles/aboutContentStyles.css
+++ b/src/components/HomeComponents/styles/aboutContentStyles.css
@@ -171,6 +171,9 @@ div .aboutContent-title-2 {
 .aboutContent-bio {
   display: none;
 }
+.aboutContent-image__overlay {
+  display: none;
+}
 
 @media (min-width: 1100px) {
   .aboutContent-container {
@@ -254,6 +257,7 @@ div .aboutContent-title-2 {
 
   /*  image overlay & hover */
   .aboutContent-image__overlay {
+    display: block;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -368,9 +372,10 @@ div .aboutContent-title-2 {
   }
 
   .aboutContent-bio p {
-    font-size: 2rem;
-    letter-spacing: 1.45px;
-    line-height: 35px;
+    font-size: 1.5rem;
+    /* letter-spacing: px; */
+    font-weight: 500;
+    line-height: 20px;
     padding-top: 20px;
   }
 
