--- a/src/components/HomeComponents/styles/projectContentStyles.css
+++ b/src/components/HomeComponents/styles/projectContentStyles.css
@@ -99,6 +99,10 @@
   text-decoration: none;
 }
 
+.project-img-overlay {
+  visibility: hidden;
+}
+
 @media (min-width: 1100px) {
   .project-container {
     grid-template-columns: repeat(13, 1fr);
@@ -154,7 +158,7 @@
   }
 
   .project-1 .project-1__button {
-    display: block;
+    visibility: hidden;
     position: absolute;
     bottom: 0;
     left: 50%;
@@ -180,8 +184,39 @@
     grid-column-end: 14;
     min-height: 500px;
     max-width: 1200px;
+    position: relative;
   }
   .project-button {
     display: none;
+  }
+
+  /*Image Overlay */
+  .project-img-overlay {
+    visibility: visible;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.75);
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: 0.5 ease;
+  }
+
+  .project-img-container:hover .project-img-overlay {
+    height: 100%;
+    cursor: pointer;
+  }
+
+  .project-img-overlay a {
+    position: absolute;
+    font-size: 5rem;
+    text-align: center;
+    color: white !important;
+    text-decoration: none;
+    margin-top: 30%;
+    width: 100%;
   }
 }
