--- a/src/components/HomeComponents/styles/aboutContentStyles.css
+++ b/src/components/HomeComponents/styles/aboutContentStyles.css
@@ -264,18 +264,21 @@ div .aboutContent-title-2 {
     right: 0;
     background-color: rgba(0, 0, 0, 0.75);
     overflow: hidden;
-    width: 100%;
     height: 0;
     transition: 0.5 ease;
+  }
+
+  .aboutContent-image__overlay:hover {
+    cursor: pointer;
   }
 
   .aboutContent-image__overlay a {
     text-decoration: none;
     /* text-transform: uppercase; */
-    margin-top: 30%;
+    margin-top: 35%;
     position: absolute;
     text-align: center;
-    font-size: 5rem;
+    font-size: 4rem;
     color: white !important;
     width: 100%;
   }
